<resources>
    <string name="app_name">深松管家</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="listfooterview_normal">查看更多</string>
    <string name="listfooterview_ready">松开载入更多</string>
    <string name="search_sn_id">输入 SN 或 ID 进行搜索</string>
    <string name="rssi">RSSI:</string>
    <string name="temperature">温度:</string>
    <string name="light">光线:</string>
    <string name="move">移动:</string>
    <string name="move_count">移动计数器:</string>
    <string name="model">型号:</string>
    <string name="firmware">固件:</string>
    <string name="battery">电池:</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="ask_bt_open">是否打开蓝牙</string>
    <string name="distance">距离:</string>
    <string name="dark">昏暗</string>
    <string name="normal">普通</string>
    <string name="glare">明亮</string>
    <string name="disable">未开启</string>
    <string name="add">+1</string>
    <string name="tips_header">当推送开关开启时,</string>
    <string name="tips_tail">进入和离开云子将收到推送</string>
    <string name="a0">a0</string>
    <string name="b0">b0</string>
    <string name="c0">c0</string>
    <string name="disappear">消失</string>
    <string name="immediate">很近</string>
    <string name="far">较远</string>
    <string name="near">较近</string>
    <string name="move_num">移动次数:</string>
    <string name="yunzi">云子</string>
    <string name="back">返回</string>
    <string name="title_distance">距离</string>
    <string name="title_range">范围</string>
    <string name="title_temperature">温度</string>
    <string name="title_light">光线</string>
    <string name="title_move">移动</string>
    <string name="title_notification">推送</string>
    <string name="still">静止</string>
    <string name="moving">运动</string>
    <string name="closed">关闭</string>
    <string name="icon_fa_star">&#xf005;</string>
    <string name="icon_fa_map_marker">&#xf041;</string>
    <string name="icon_fa_cloud">&#xf0c2;</string>
    <string name="icon_fa_lightbulb_o">&#xf0eb;</string>
    <string name="icon_fa_rocket">&#xf135;</string>
    <string name="icon_fa_rss">&#xf09e;</string>
    <string name="icon_fa_user">&#xf007;</string>
    <string name="icon_fa_fresh">&#xf021;</string>
    <string name="icon_fa_info_circle">&#xf05a;</string>
    <string name="icon_fa_bullseye">&#xf140;</string>
    <string name="degree">℃</string>
    <string name="percent">%</string>
    <string name="lx">lx</string>
    <string name="current_device_sn">当前设备SN：</string>
    <string name="current_device_major">设备Major:</string>
    <string name="current_device_minor">设备Minor:</string>
    <string name="current_device_distance">设备距离:</string>
    <string name="app_setting">setting</string>
    <string name="current_config_state">配置状态:</string>
    <string name="app_id">app_id</string>
    <string name="cancel">取    消</string>
    <string name="ok">确认</string>
    <string name="exit">退    出</string>
    <string name="err_text">出错啦！</string>
    <string name="choosehint">(选填)</string>
    <string name="clear">注    销</string>
    <string name="real_time">实时</string>
    <string name="check">查看</string>
    <string name="area_filter">筛  选</string>
    <string name="filter_str">筛  选</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>