<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@color/white"
        android:divider="@drawable/line_divider_horizontal"
        android:orientation="vertical"
        android:showDividers="middle|beginning">

        <!--android:text="@string/app_name"-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/clear"
            android:textColor="@color/text_gray"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="0dp"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/exit"
            android:textColor="@color/main"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/cancel"
            android:textColor="@color/text_gray"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>